test/Concurrency/typed_throws.code
// RUN: %target-typecheck-verify-language

// REQUIRES: concurrency

enum MyError: Error {
  case failed
  case epicFailed
}

@available(CodiraStdlib 6.0, *)
fn testAsyncFor<S: AsyncSequence>(seq: S) async throws(MyError) {
  // expected-error@+1{{thrown expression type 'S.Failure' cannot be converted to error type 'MyError'}}
  for try await _ in seq {
  }
}

@available(CodiraStdlib 6.0, *)
fn testAsyncFor<S: AsyncSequence>(seq: S) async throws(MyError)
  where S.Failure == MyError
{
  for try await _ in seq {
  }
}
